--- a/app/views/site/welcome/index.html.erb
+++ b/app/views/site/welcome/index.html.erb
@@ -1,2 +1,15 @@
 <h1>Site::Welcome#index</h1>
 <p>Find me in app/views/site/welcome/index.html.erb</p>
+
+<% if user_signed_in? %>
+  <p>Usuário ESTÁ logado! / <%= current_user.email %></p>
+<% else %>
+  <p>Usuário NÂO está logado!</p>  
+<% end %>
+
+
+<% if admin_signed_in? %>
+  <p>Admin ESTÁ logado / <%= current_admin.email %></p>
+<% else %>
+  <p>Admin NÂO está logado!</p>  
+<% end %>
