--- a/app/views/admins_backoffice/welcome/index.html.erb
+++ b/app/views/admins_backoffice/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>AdminsBackoffice::Welcome#index</h1>
-<p>Find me in app/views/admins_backoffice/welcome/index.html.erb</p>
+<div class="row">
+  <div class="col-6 p-5">
+    <h1>AdminsBackoffice</h1>
+  </div>
+</div>
