--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -9,9 +9,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%#= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'application' %>  
+    <%= csp_meta_tag %>    
+    <%= stylesheet_pack_tag 'application' %><%#= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>  
   </head>
 
   <body class="hold-transition sidebar-mini">
@@ -26,12 +25,21 @@
             <a href="index3.html" class="nav-link">Home</a>
           </li>
         </ul>
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto mr-3">
           <li class="nav-item">
-            <%= link_to destroy_admin_session_path, method: :delete, class:"nav-link" do %>
-              <i class='fas fa-sign-out-alt'></i> Sair
-            <% end %>
-          </li>        
+            <div class="dropdown">
+              <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user"></i>
+              </button>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              
+                <%= link_to destroy_admin_session_path, method: :delete, class:"nav-link" do %>
+                  <i class='fas fa-sign-out-alt'></i> Sair
+                <% end %>
+
+              </div>
+            </div>
+          </li>
         </ul>
       </nav>
       
@@ -74,12 +82,11 @@
         <div class="float-right d-none d-sm-inline">
           <p>barufiTech</p>
         </div>
-        <strong>Copyright &copy; <%= DateTime.now %></strong>
+        <strong>Copyright &copy; <%= l(DateTime.now )%></strong>
       </footer>
     </div>
 
-    <%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application' %>
+    <%= javascript_pack_tag 'application' %><%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   </body>
 </html>
