--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -1,2 +1,29 @@
-
-<h1>Admins</h1>
+<div class="card">
+  <div class="card-header">
+    <h1>Listando Administradores</h1>  
+  </div>
+  <div class="card-body">
+    <div class="table-responsive">
+      <table class="table table-hover table-bordered">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th colspan="4">Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @admins.each do |admin| %>
+            <tr>
+              <td><%= admin.id %></td>
+              <td><%= admin.email %></td>
+              <td><i class="fas fa-edit"></i></td>
+              <td><i class="fas fa-trash-alt"></i></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="card-footer">
+  </div>
+</div>
