--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -16,7 +16,11 @@
             <tr>
               <td><%= admin.id %></td>
               <td><%= admin.email %></td>
-              <td><i class="fas fa-edit"></i></td>
+              <td>
+                <%= link_to edit_admins_backoffice_admin_path(admin) do %>
+                  <i class="fas fa-edit"></i>
+                <% end %>
+              </td>
               <td><i class="fas fa-trash-alt"></i></td>
             </tr>
           <% end %>
