--- a/app/views/admins_backoffice/welcome/index.html.erb
+++ b/app/views/admins_backoffice/welcome/index.html.erb
@@ -1,2 +1,10 @@
-
-<h1>AdminsBackoffice</h1>
+<div class="card">
+  <div class="card-header">
+    <h1>AdminsBackoffice</h1>
+  </div>
+  <div class="card-body">
+    
+  </div>
+  <div class="card-footer">
+  </div>
+</div>
