--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -8,7 +8,12 @@
         <thead>
           <tr>
             <th>#</th>
-            <th colspan="4">Email</th>
+            <th>Email</th>
+            <th colspan="2">
+              <%= link_to new_admins_backoffice_admin_path, class:"btn btn-primary btn-sm float-right" do %>
+                New
+              <% end %>
+            </th>
           </tr>
         </thead>
         <tbody>
@@ -17,11 +22,15 @@
               <td><%= admin.id %></td>
               <td><%= admin.email %></td>
               <td>
-                <%= link_to edit_admins_backoffice_admin_path(admin) do %>
+                <%= link_to edit_admins_backoffice_admin_path(admin), class:"float-right" do %>
                   <i class="fas fa-edit"></i>
                 <% end %>
               </td>
-              <td><i class="fas fa-trash-alt"></i></td>
+              <td>
+                <%= link_to '#', class:"float-right" do %>
+                  <i class="fas fa-trash-alt"></i>
+                <% end %>
+              </td>
             </tr>
           <% end %>
         </tbody>
