--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -99,5 +99,7 @@
 
     <%= javascript_pack_tag 'application' %><%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+    <%= render 'layouts/notifications' %>
+
   </body>
 </html>
