--- a/app/views/admins_backoffice/admins/new.html.erb
+++ b/app/views/admins_backoffice/admins/new.html.erb
@@ -1,39 +1,3 @@
-<div class="card">  
-  <div class="card-header">
-    <h1>Cadastrar Administrador</h1>
-      <% if @admin.errors.any? %>
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">    
-          <ul class="m-auto">
-            <% @admin.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-      <% end %>
-  </div>
-  <div class="card-body">
 
-    <div class="table-responsive">
-      <%= form_with(model: [ :admins_backoffice, @admin ], local: true) do |form| %>
-        <div class="form-group">
-          <%= form.label :email %>
-          <%= form.text_field :email, class:"form-control", placeholder:"Enter email" %>
-        </div>
-        <div class="form-group">
-          <%= form.label :password %>
-          <%= form.text_field :password, class:"form-control", type:"password" ,placeholder:"Senha" %>
-        </div>
-        <div class="form-group">
-          <%= form.label :password_confirmation %>
-          <%= form.text_field :password_confirmation, class:"form-control", type:"password" ,placeholder:"Confirmação da senha" %>
-        </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
-      <% end %>
-    </div>
-  </div>
-  <div class="card-footer">
-  </div>
-</div>
+<%= render partial: 'admins_backoffice/admins/form', locals: { form_title: "Cadastrar Administrador"} %>
+
