added controller subjects

--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -72,6 +72,15 @@
                 <% end %>
 
               </li>
+
+              <li class="nav-item">
+
+                <%= link_to '#', class:"nav-link" do %>
+                  <i class="nav-icon fas fa-file-alt"></i>
+                  <p>Assuntos/Áreas</p>
+                <% end %>
+
+              </li>              
             </ul>
           </nav>
         </div>
