--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -1,4 +1,3 @@
 <li class="page-item">
-  <%#= link_to_unless current_page.first?, raw(t 'views.pagination.first'), url, remote: remote, class: 'page-link' %>
-  <%= link_to_unless current_page.first?, raw('<span aria-hidden="true">&laquo;</span>').html_safe, url, remote: remote, class: 'page-link' %>
+  <%= link_to_unless current_page.first?, raw(t 'views.pagination.first'), url, remote: remote, class: 'page-link' %>
 </li>
