--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,4 +1,3 @@
 <li class="page-item">
-  <%#= link_to_unless current_page.last?, raw(t 'views.pagination.next'), url, rel: 'next', remote: remote, class: 'page-link' %>
-  <%= link_to_unless current_page.last?, raw('<span aria-hidden="true">&raquo;</span>').html_safe, url, rel: 'next', remote: remote, class: 'page-link' %>
+  <%= link_to_unless current_page.last?, raw(t 'views.pagination.next'), url, rel: 'next', remote: remote, class: 'page-link' %>
 </li>
