--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -75,7 +75,7 @@
 
               <li class="nav-item">
 
-                <%= link_to '#', class:"nav-link" do %>
+                <%= link_to admins_backoffice_subjects_path, class:"nav-link" do %>
                   <i class="nav-icon fas fa-file-alt"></i>
                   <p>Assuntos/Áreas</p>
                 <% end %>
