fixing I18n in admins

--- a/app/views/admins_backoffice/admins/_form.html.erb
+++ b/app/views/admins_backoffice/admins/_form.html.erb
@@ -30,7 +30,7 @@
           <%= form.label :password_confirmation %>
           <%= form.text_field :password_confirmation, class:"form-control", type:"password" ,placeholder:"Confirmação da senha" %>
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="btn btn-primary"><%= t("views.actions.save")%></button>
       <% end %>
     </div>
   </div>
