--- a/app/views/admins_backoffice/admins/new.html.erb
+++ b/app/views/admins_backoffice/admins/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'admins_backoffice/admins/form', locals: { form_title: "Cadastrar Administrador"} %>
+<%= render partial: 'admins_backoffice/admins/form', locals: { form_title: "#{t('views.admins.title_new')}"} %>
