--- a/app/views/admins_backoffice/questions/index.html.erb
+++ b/app/views/admins_backoffice/questions/index.html.erb
@@ -7,9 +7,9 @@
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
-            <th>#</th>
-            <th>Assunto</th>
-            <th>Descrição</th>
+            <th><%= translate_atribute(@questions, :id) %></th>
+            <th><%= translate_atribute(@questions, :description) %></th>
+            <th><%= translate_atribute(@questions, :subject) %></th>
             <th colspan="2">
               <%= link_to new_admins_backoffice_question_path, class:"btn btn-primary btn-sm float-right" do %>
                 New
@@ -21,8 +21,8 @@
           <% @questions.each do |question| %>
             <tr>
               <td><%= question.id %></td>
-              <td><%= question.subject.description.truncate(35) %></td>
               <td><%= question.description.truncate(55) %></td>
+              <td><%= question.subject.description.truncate(35) %></td>
               <td>
                 <%= link_to edit_admins_backoffice_question_path(question), class:"float-right" do %>
                   <i class="fas fa-edit"></i>
