--- a/app/views/admins_backoffice/questions/index.html.erb
+++ b/app/views/admins_backoffice/questions/index.html.erb
@@ -7,9 +7,9 @@
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
-            <th><%= translate_atribute(@questions, :id) %></th>
-            <th><%= translate_atribute(@questions, :description) %></th>
-            <th><%= translate_atribute(@questions, :subject) %></th>
+            <th><%= translate_attribute(@questions, :id) %></th>
+            <th><%= translate_attribute(@questions, :description) %></th>
+            <th><%= translate_attribute(@questions, :subject) %></th>
             <th colspan="2">
               <%= link_to new_admins_backoffice_question_path, class:"btn btn-primary btn-sm float-right" do %>
                 New
