--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -7,8 +7,8 @@
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
-            <th><%= translate_atribute(@admins, :id) %></th>
-            <th><%= translate_atribute(@admins, :email) %></th>
+            <th><%= translate_attribute(@admins, :id) %></th>
+            <th><%= translate_attribute(@admins, :email) %></th>
             <th colspan="2">
               <%= link_to new_admins_backoffice_admin_path, class:"btn btn-primary btn-sm float-right" do %>
                 <%= t("views.actions.new")%>
