fixing I18n for subjects

--- a/app/views/admins_backoffice/subjects/new.html.erb
+++ b/app/views/admins_backoffice/subjects/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'admins_backoffice/subjects/form', locals: { form_title: "Cadastrar Assunto/Área"} %>
+<%= render partial: 'admins_backoffice/subjects/form', locals: { form_title: "#{t('views.subjets.title_new')}"} %>
