--- a/app/views/admins_backoffice/subjects/edit.html.erb
+++ b/app/views/admins_backoffice/subjects/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'admins_backoffice/subjects/form', locals: { form_title: "Editar Assunto/Área"} %>
+<%= render partial: 'admins_backoffice/subjects/form', locals: { form_title: "#{t('views.subjets.title_edit')}"} %>
