--- a/app/views/admins_backoffice/subjects/index.html.erb
+++ b/app/views/admins_backoffice/subjects/index.html.erb
@@ -11,7 +11,7 @@
             <th><%= translate_attribute(@subjects, :description) %></th>
             <th colspan="2">
               <%= link_to new_admins_backoffice_subject_path, class:"btn btn-primary btn-sm float-right" do %>
-                New
+                <%= t("views.actions.new") %>
               <% end %>
             </th>
           </tr>
@@ -22,12 +22,12 @@
               <td><%= subject.id %></td>
               <td><%= subject.description %></td>
               <td>
-                <%= link_to edit_admins_backoffice_subject_path(subject), class:"float-right" do %>
+                <%= link_to edit_admins_backoffice_subject_path(subject), class:"float-right", title:"#{t('views.actions.edit')}" do %>
                   <i class="fas fa-edit"></i>
                 <% end %>
               </td>
               <td>
-                <%= link_to admins_backoffice_subject_path(subject), method: :delete, data: { confirm: "Tem certeza?"}, class:"float-right" do %>
+                <%= link_to admins_backoffice_subject_path(subject), method: :delete, data: { confirm: "#{t('views.actions.confirm')}"}, class:"float-right", title:"#{t('views.actions.delete')}" do %>
                   <i class="fas fa-trash-alt"></i>
                 <% end %>
               </td>
