fixing I18n for subjects

--- a/app/views/admins_backoffice/subjects/_form.html.erb
+++ b/app/views/admins_backoffice/subjects/_form.html.erb
@@ -22,7 +22,7 @@
           <%= form.label :description %>
           <%= form.text_field :description, class:"form-control", placeholder:"Descrição" %>
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="btn btn-primary"><%= t("views.actions.save") %></button>
       <% end %>
     </div>
   </div>
