fixing I18n for questions

--- a/app/views/admins_backoffice/questions/edit.html.erb
+++ b/app/views/admins_backoffice/questions/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'admins_backoffice/questions/form', locals: { form_title: "Editar Pergunta"} %>
+<%= render partial: 'admins_backoffice/questions/form', locals: { form_title: "#{t('views.questions.title_edit')}"} %>
