--- a/app/views/admins_backoffice/questions/_form.html.erb
+++ b/app/views/admins_backoffice/questions/_form.html.erb
@@ -26,7 +26,7 @@
           <%= form.label :subject_id %>
           <%= form.collection_select(:subject_id, @subjects, :id, :description, {}, class:"form-control") %>
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="btn btn-primary"><%= t("views.actions.save") %></button>
       <% end %>
     </div>
   </div>
