--- a/app/views/admins_backoffice/questions/index.html.erb
+++ b/app/views/admins_backoffice/questions/index.html.erb
@@ -12,7 +12,7 @@
             <th><%= translate_attribute(@questions, :subject) %></th>
             <th colspan="2">
               <%= link_to new_admins_backoffice_question_path, class:"btn btn-primary btn-sm float-right" do %>
-                New
+                <%= t("views.actions.new") %>
               <% end %>
             </th>
           </tr>
@@ -24,12 +24,12 @@
               <td><%= question.description.truncate(55) %></td>
               <td><%= question.subject.description.truncate(35) %></td>
               <td>
-                <%= link_to edit_admins_backoffice_question_path(question), class:"float-right" do %>
+                <%= link_to edit_admins_backoffice_question_path(question), class:"float-right", title:"#{t('views.actions.edit')}" do %>
                   <i class="fas fa-edit"></i>
                 <% end %>
               </td>
               <td>
-                <%= link_to admins_backoffice_question_path(question), method: :delete, data: { confirm: "Tem certeza?"}, class:"float-right" do %>
+                <%= link_to admins_backoffice_question_path(question), method: :delete, data: { confirm: "#{t('views.actions.confirm')}"}, class:"float-right", title:"#{t('views.actions.delete')}" do %>
                   <i class="fas fa-trash-alt"></i>
                 <% end %>
               </td>
