--- a/app/views/admins_backoffice/questions/new.html.erb
+++ b/app/views/admins_backoffice/questions/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'admins_backoffice/questions/form', locals: { form_title: "Cadastrar Pergunta"} %>
+<%= render partial: 'admins_backoffice/questions/form', locals: { form_title: "#{t('views.questions.title_new')}"} %>
