fixing I18n for welcome

--- a/app/views/admins_backoffice/welcome/index.html.erb
+++ b/app/views/admins_backoffice/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <h1>AdminsBackoffice</h1>
+    <h1><%= t('views.welcome.title')%></h1>
   </div>
   <div class="card-body">
     
