--- a/app/views/admins_backoffice/admins/_form.html.erb
+++ b/app/views/admins_backoffice/admins/_form.html.erb
@@ -20,15 +20,15 @@
       <%= form_with(model: [ :admins_backoffice, @admin ], local: true) do |form| %>
         <div class="form-group">
           <%= form.label :email %>
-          <%= form.text_field :email, class:"form-control", placeholder:"Enter email" %>
+          <%= form.text_field :email, class:"form-control", placeholder:"#{t('forms.email')}" %>
         </div>
         <div class="form-group">
           <%= form.label :password %>
-          <%= form.text_field :password, class:"form-control", type:"password" ,placeholder:"Senha" %>
+          <%= form.text_field :password, class:"form-control", type:"password" ,placeholder:"#{t('forms.password')}" %>
         </div>
         <div class="form-group">
           <%= form.label :password_confirmation %>
-          <%= form.text_field :password_confirmation, class:"form-control", type:"password" ,placeholder:"Confirmação da senha" %>
+          <%= form.text_field :password_confirmation, class:"form-control", type:"password" ,placeholder:"#{t('forms.password_confirmation')}" %>
         </div>
         <button type="submit" class="btn btn-primary"><%= t("views.actions.save") %></button>
       <% end %>
