--- a/app/views/admins_backoffice/questions/_form.html.erb
+++ b/app/views/admins_backoffice/questions/_form.html.erb
@@ -20,7 +20,7 @@
       <%= form_with(model: [ :admins_backoffice, @question ], local: true) do |form| %>
         <div class="form-group">
           <%= form.label :description %>
-          <%= form.text_area :description, class:"form-control", placeholder:"Descrição da Pergunta", rows: 5 %>
+          <%= form.text_area :description, class:"form-control", placeholder:"#{t('forms.description')}", rows: 5 %>
         </div>
         <div class="form-group">
           <%= form.label :subject_id %>
