--- a/app/views/admins_backoffice/subjects/index.html.erb
+++ b/app/views/admins_backoffice/subjects/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <h1>Listando Assuntos/Áreas</h1>  
+    <h2><%= t("views.subjets.title_list")%></h2>  
   </div>
   <div class="card-body">
     <div class="table-responsive">
