--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    
-    <title>TimeToAnswer</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%#= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'application' %>
-  
-  </head>
+  <%= render 'layouts/head' %>
 
   <body class="hold-transition sidebar-mini">
   <div class="wrapper">
@@ -260,9 +246,7 @@
     </footer>
   </div>
 
-  <%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application' %>
   <!-- ./wrapper -->
-
+  <%= render 'layouts/notifications' %>
   </body>
 </html>
