--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -4,8 +4,50 @@
   <%= render 'layouts/head' %>
 
   <body>
-    <h1>Layout Site</h1>
-    <%= yield %>
+    <main role="main" class="container">
+      <nav class="navbar navbar-expand-lg navbar-light mt-3 mb-3" style="background-color: #E9ECEF;">
+        <a class="navbar-brand" href="#">TimeToAnswer</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+          <ul class="navbar-nav ml-auto">
+            <% unless user_signed_in? %>
+
+              <%= link_to 'Login', new_user_session_path, class:"nav-link"%>
+              <%= link_to 'Cadastrar-se', new_user_registration_path, class:"nav-link"%>
+
+            <% else %>
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%= current_user.email %>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <%= link_to users_backoffice_welcome_index_path, class:"dropdown-item" do %>
+                    <i class="far fa-id-card"></i> Perfil
+                  <% end %>
+                  <div class="dropdown-divider"></div>
+                  <%= link_to destroy_user_session_path, method: :delete, class:"dropdown-item" do %>
+                    <i class='fas fa-sign-out-alt'></i> Sair
+                  <% end %>
+                </div>
+              </li>
+
+            <% end %>
+
+          </ul>
+
+        </div>
+      </nav>
+
+      <div class="jumbotron">
+        <%= yield %>
+      </div>
+    </main>
+  
     <%= render 'layouts/notifications' %>
   </body>
 </html>
