--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,43 +5,34 @@
     </div>
 
     <div class="card">
-      <div class="card-body register-card-body">        
+      <div class="card-body register-card-body">
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
           <%= render "users/shared/error_messages", resource: resource %>
 
-          <div class="input-group mb-3">
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Email" %>
-            <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-envelope"></span>
-              </div>
-            </div>
+          <div class="form-text">
+            <%= f.label :email %>
+            <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
           </div>
 
-          <div class="input-group mb-3">
+          <div class="form-text">
+            <%= f.label :password %>
             <% if @minimum_password_length %>
-              <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Password (#{@minimum_password_length} characters minimum)" %>
+              <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+              <small class="form-text">(<%= @minimum_password_length %> caracteres no mínimo)</small>
             <% end %>
-            <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-lock"></span>
-              </div>
-            </div>
           </div>
 
-          <div class="input-group mb-3">
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Retype password" %>
-            <div class="input-group-append">
-              <div class="input-group-text">
-                <span class="fas fa-lock"></span>
-              </div>
-            </div>
+          <div class="form-text mb-3">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Retype password" %>
           </div>
 
-          <%= f.submit "Sign up", class: "btn btn-primary btn-block" %>
-          <%= render "users/shared/links" %>
+          <div class="actions">
+            <%= f.submit "Sign up", class: "btn btn-primary btn-block mb-3" %>
+            <%= render "users/shared/links" %>
+          </div>
         <% end %>
 
       </div>
