--- a/app/views/site/welcome/index.html.erb
+++ b/app/views/site/welcome/index.html.erb
@@ -1,15 +1,20 @@
-<h1>Site::Welcome#index</h1>
-<p>Find me in app/views/site/welcome/index.html.erb</p>
+<% @questions.each do |question| %>
 
-<% if user_signed_in? %>
-  <p>Usuário ESTÁ logado! / <%= current_user.email %></p>
-<% else %>
-  <p>Usuário NÂO está logado!</p>  
-<% end %>
+  <div class="card">
+    <h5 class="card-header" style="background-color: #E9ECEF;"> 
+      <%= question.description %>
+    </h5>
 
+    <div class="card-body">
+      <ul>
+      
+        <% question.answers.each do |answer|%>
+          <li> <%= answer.description %> </li>
+        <% end %>
 
-<% if admin_signed_in? %>
-  <p>Admin ESTÁ logado / <%= current_admin.email %></p>
-<% else %>
-  <p>Admin NÂO está logado!</p>  
+      </ul>
+    </div>
+
+  </div>
+
 <% end %>
