--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -13,6 +13,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+          <%= form_with(url: site_search_path, local: true, method: :get, class: "form-inline my-2 my-lg-0") do |form| %>
+            <%= form.text_field :term, class: "form-control mr-sm-2", placeholder: "Pesquisar" %>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+          <% end %>
+
           <ul class="navbar-nav ml-auto">
             <% unless user_signed_in? %>
 
