added link to root_path

--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -6,7 +6,9 @@
   <body>
     <main role="main" class="container">
       <nav class="navbar navbar-expand-lg navbar-light mt-3 mb-3" style="background-color: #E9ECEF;">
-        <a class="navbar-brand" href="#">TimeToAnswer</a>
+
+        <%= link_to 'Time to Answer', root_path, class: "navbar-brand ml-4 mr-4"%>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
           <%= form_with(url: site_search_path, local: true, method: :get, class: "form-inline my-2 my-lg-0") do |form| %>
-            <%= form.text_field :term, class: "form-control mr-sm-2", placeholder: "Pesquisar" %>
+            <%= form.text_field :term, class: "form-control mr-sm-2", placeholder: "Pesquisar pergunta" %>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
           <% end %>
 
