--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -51,20 +51,10 @@
       </nav>
 
       <div class="jumbotron">
-        <h1>Site::Welcome#index</h1>
-        <p>Find me in app/views/site/welcome/index.html.erb</p>
-
-        <% if user_signed_in? %>
-          <p>Usuário ESTÁ logado! / <%= current_user.email %></p>
+        <% unless params[:term] %>
+          <h3>Últimas perguntas cadastradas...</h3>
         <% else %>
-          <p>Usuário NÂO está logado!</p>  
-        <% end %>
-
-
-        <% if admin_signed_in? %>
-          <p>Admin ESTÁ logado / <%= current_admin.email %></p>
-        <% else %>
-          <p>Admin NÂO está logado!</p>  
+          <h3><%= "Reulstados para o termo: \"#{params[:term]}\"."%></h3>          
         <% end %>
       </div>
         <%= yield %>
