--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -1,14 +1,31 @@
-<% @questions.each do |question| %>
-  <div class="card">
-      <h5 class="card-header" style="background-color: #E9ECEF;"> <%= question.description %> </h5>
-      <div class="card-body">
-        <ul>
-          <% question.answers.each do |answer|%>
-            <li> <%= answer.description %> </li>
-          <% end %>
-        </ul>
-      </div>
+  <div class="jumbotron">
+    <% unless params[:term] %>
+      <h3>Últimas perguntas cadastradas...</h3>
+    <% else %>
+      <h3><%= "Resultados para o termo: \"#{params[:term]}\"."%></h3>          
+    <% end %>
   </div>
+
+<% @questions.each do |question| %>
+  <%= form_with url: site_answer_path, local: true do |form| %>
+    <div class="card">
+        <h5 class="card-header" style="background-color: #E9ECEF;"> <%= question.description %> </h5>
+        <div class="card-body">
+          <ul>
+            <% question.answers.each do |answer|%>
+              <li style="list-style:none">
+                <label class="form-check-label">
+                  <%= radio_button_tag 'answer', answer.id %> <%= answer.description %>
+                </label>
+              </li>
+            <% end %>
+            <li style="list-style:none">
+              <%= form.submit 'Responder', class: "btn btn-primary btn-sm mt-2" %>
+            </li>
+          </ul>
+        </div>
+    </div>
+  <% end %>
 <% end %>
 
 <div class="card">
