--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -15,7 +15,7 @@
             <% question.answers.each do |answer|%>
               <li style="list-style:none">
                 <label class="form-check-label">
-                  <%= radio_button_tag 'answer', answer.id %> <%= answer.description %>
+                  <%= radio_button_tag 'answer_id', answer.id %> <%= answer.description %>
                 </label>
               </li>
             <% end %>
