--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -15,9 +15,15 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-          <%= form_with(url: site_search_path, local: true, method: :get, class: "form-inline my-2 my-lg-0") do |form| %>
-            <%= form.text_field :term, class: "form-control mr-sm-2", placeholder: "Pesquisar pergunta" %>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+          <%= form_with(url: site_search_path, local: true, method: :get, class: "form-inline ml-3") do |form| %>
+            <div class="input-group input-group-sm">
+              <%= form.text_field :term, class: "form-control form-control-navbar", placeholder: "Pesquisar pergunta" %>
+              <div class="input-group-append">
+                <button class="btn btn-navbar" type="submit">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </div>
           <% end %>
 
           <ul class="navbar-nav ml-auto">
