--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -6,7 +6,7 @@
   <%= form_with url: site_answer_path do |form| %>
     <div class="card">
         <h5 class="card-header" style="background-color: #E9ECEF;">
-          <%= link_to "#{question.subject.description} (#{question.subject.questions.count})", site_search_subject_path(question.subject_id, question.subject.description), class: "badge badge-info mr-2" %>
+          <%= link_to "#{question.subject.description} (#{question.subject.questions_count})", site_search_subject_path(question.subject_id, question.subject.description), class: "badge badge-info mr-2" %>
           <%= question.description %> 
         </h5>
         <div class="card-body">
