--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -35,16 +35,16 @@
             <% else %>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <%= current_user.email %>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <%= link_to users_backoffice_welcome_index_path, class:"dropdown-item" do %>
-                    <i class="far fa-id-card"></i> Perfil
+                    <i class="far fa-id-card mr-2"></i> Perfil
                   <% end %>
                   <div class="dropdown-divider"></div>
                   <%= link_to destroy_user_session_path, method: :delete, class:"dropdown-item" do %>
-                    <i class='fas fa-sign-out-alt'></i> Sair
+                    <i class='fas fa-sign-out-alt mr-2'></i> Sair
                   <% end %>
                 </div>
               </li>
