--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -49,13 +49,22 @@
 
         <div class="sidebar">
 
+          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+            <div class="image">
+              <%= image_tag("avatar.png", options = {class: "img-circle elevation-2"}) %>
+            </div>
+            <div class="info">
+              <a href="#" class="d-block">Alexander Pierce</a>
+            </div>
+          </div>
+
           <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
               <li class="nav-item">
                 <%= link_to "#", class:"nav-link" do  %>
-                  <i class="nav-icon fas fa-tachometer-alt"></i>
-                  <p>Dashboard</p>
+                  <i class="nav-icon fas fa-user"></i>
+                  <p>Dados do Perfil</p>
                 <% end %>
               </li>
 
