--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -54,7 +54,8 @@
               <%= image_tag("avatar.png", options = {class: "img-circle elevation-2"}) %>
             </div>
             <div class="info">
-              <a href="#" class="d-block">Alexander Pierce</a>
+              <!--a href="#" class="d-block">Alexander Pierce</a-->
+              <%= current_user.full_name %>
             </div>
           </div>
 
