adding views for user profile

--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -63,7 +63,7 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
               <li class="nav-item">
-                <%= link_to "#", class:"nav-link" do  %>
+                <%= link_to users_backoffice_profile_path, class:"nav-link" do  %>
                   <i class="nav-icon fas fa-user"></i>
                   <p>Dados do Perfil</p>
                 <% end %>
