--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -1,8 +1,37 @@
 <div class="card">
   <div class="card-header">
-    <h1>Olá <%= current_user.full_name %>!</h1>
+    <h3>Editar Dados Perfil</h3>
   </div>
   <div class="card-body">
+    <form>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-12 mt-2 col-sm-6">
+            <label>Nome</label>
+            <input type="text" class="form-control" placeholder="Nome">
+          </div>
+          <div class="col-12 mt-2 col-sm-6">
+            <label>Sobrenome</label>
+            <input type="text" class="form-control" placeholder="Sobrenome">
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label>E-mail</label>
+        <input type="text" class="form-control" placeholder="E-mail">
+      </div>
+      <div class="form-group">
+        <label>Senha</label>
+        <input type="password" class="form-control" placeholder="Senha">
+      </div>
+      <div class="form-group">
+        <label>Confirmação de Senha</label>
+        <input type="password" class="form-control" placeholder="Confirmação de Senha">
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Salvar</button>
+      </div>
+    </form>
   </div>
   <div class="card-footer">
   </div>
