--- a/app/views/users_backoffice/profile/edit.html.erb
+++ b/app/views/users_backoffice/profile/edit.html.erb
@@ -1,37 +1,53 @@
 <div class="card">
   <div class="card-header">
     <h3>Editar Dados Perfil</h3>
+      <% if @user.errors.any? %>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <ul class="m-auto">
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      <% end %>
   </div>
   <div class="card-body">
-    <form>
+
+    <%= form_with(url: users_backoffice_profile_path, model: @user, local: true) do |form| %>
+
       <div class="form-group">
         <div class="row">
           <div class="col-12 mt-2 col-sm-6">
-            <label>Nome</label>
-            <input type="text" class="form-control" placeholder="Nome">
+            <%= form.label :first_name %>
+            <%= form.text_field :first_name, class: "form-control", placeholder: "Nome" %>
           </div>
           <div class="col-12 mt-2 col-sm-6">
-            <label>Sobrenome</label>
-            <input type="text" class="form-control" placeholder="Sobrenome">
+            <%= form.label :last_name %>
+            <%= form.text_field :last_name, class: "form-control", placeholder: "Sobrenome" %>
           </div>
         </div>
       </div>
       <div class="form-group">
-        <label>E-mail</label>
-        <input type="text" class="form-control" placeholder="E-mail">
+        <%= form.label :email %>
+        <%= form.text_field :email, class: "form-control", readonly: true %>
       </div>
       <div class="form-group">
-        <label>Senha</label>
-        <input type="password" class="form-control" placeholder="Senha">
+        <%= form.label :password %>
+        <%= form.text_field :password, class: "form-control", type:"password", placeholder: "Senha" %>
       </div>
       <div class="form-group">
-        <label>Confirmação de Senha</label>
-        <input type="password" class="form-control" placeholder="Confirmação de Senha">
+        <%= form.label :password_confirmation %>
+        <%= form.text_field :password_confirmation, class: "form-control", type:"password", placeholder: "Confirmação de Senha" %>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Salvar</button>
       </div>
-    </form>
+
+    <% end %>
+
   </div>
   <div class="card-footer">
   </div>
