--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -13,7 +13,7 @@
             <div class="col-12 mt-2 col-sm-6">
               <div class="form-group">
                 <div class="text-center">
-                  <%= image_tag(avatar_url, class: "img-circle img-fluid ml-5 mt-5 mb-5", alt: "avatar") %>
+                  <%= image_tag(avatar_url, class: "img-circle img-fluid", alt: "avatar") %>
                 </div>
                 <%= profile_form.file_field :avatar %>
               </div>
