--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -10,5 +10,7 @@
   <%= csp_meta_tag %>    
   <%= stylesheet_pack_tag 'application' %><%#= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>  
   <%= javascript_pack_tag 'application' %><%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
