--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -1,7 +1,7 @@
 <div class="modal fade" id="avatarModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
-      <%= form_with(url: users_backoffice_profile_path, model: current_user, local: true) do |form| %>
+      <%= form_with(url: users_backoffice_profile_path, model: current_user) do |form| %>
         <div class="modal-header">
           <h5 class="modal-title" id="staticBackdropLabel">Avatar</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -13,7 +13,7 @@
             <div class="col-12 mt-2 col-sm-6">
               <div class="form-group">
                 <div class="text-center">
-                  <%= image_tag(avatar_url, class: "img-circle img-fluid", alt: "avatar") %>
+                  <%= image_tag(avatar_url, class: "img-circle img-fluid", alt: "avatar", id: "avatarImgModal") %>
                 </div>
                 <%= profile_form.file_field :avatar %>
               </div>
