--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -29,7 +29,15 @@
           <% end %>
 
           <ul class="navbar-nav ml-auto">
+
             <% unless user_signed_in? %>
+
+            <li class="nav-item">
+              <a class="nav-link" href="?locale=pt-BR">Português</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="?locale=en">English</a>
+            </li>
 
               <%= link_to 'Login', new_user_session_path, class:"nav-link"%>
               <%= link_to 'Cadastrar-se', new_user_registration_path, class:"nav-link"%>
