--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -4,7 +4,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <title>TimeToAnswer</title>
-
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>    
